--- a/devquiz/pubspec.yaml
+++ b/devquiz/pubspec.yaml
@@ -3,7 +3,7 @@ description: DevQuiz - Gabul DEV
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -18,5 +18,6 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/database/
 
   uses-material-design: true
